--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     padding: 10px;
+    min-width: 400px;
 }
 
 input {
@@ -22,4 +23,16 @@ button {
     border: 0;
     color: #fff;
     cursor: pointer;
+}
+
+ul {
+    margin-top: 20px;
+}
+
+li {
+    margin-top: 5px;
+}
+
+a {
+    color: #5f9341;
 }
